[package]
name = "tracing-logstash"
version = "0.5.0"
authors = ["Henrik Gustafsson <gsson@fnord.se>"]
license = "MIT"
edition = "2021"
description = "Minimal library to output logstash formatted events"
homepage = "https://github.com/gsson/tracing-logstash"
readme = "../README.md"
keywords = ["logging", "tracing", "logstash"]

[dependencies]
tracing-core = { version = "0", default-features = false }
tracing-subscriber = { version = "0", default-features = false, features = [ "fmt" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
time = { version = "0.3", default-features = false, features = [ "std", "formatting" ] }
opentelemetry = { version = "0.20", optional = true }
tracing-opentelemetry = { version = "0", optional = true }

[features]
default = []
opentelemetry = ["dep:opentelemetry", "tracing-opentelemetry"]
